# deriv-estimation-study

./: .gitignore  AAA_ROM_PROTOTYPE_RESULTS.md  APPROXFUN_EXTENSION_SUMMARY.md  CLEANUP_HISTORY.md  COMPREHENSIVE_STUDY_METHODS.md  DESIGN.md  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  METHOD_INVENTORY.md  Manifest.toml  NRMSE_METRIC.md  PAPER_UPDATE_SUMMARY.md  PYNUMDIFF_IMPLEMENTATION_SUMMARY.md  Project.toml  README.md  README_ORGANIZATION.md  STATUS.md  auto_sanity.txt  build_paper.sh  config.toml  debug_failing_methods.py  examine_kalman_docs.py  examine_kalman_docs_fixed.py  firstlog.txt  firsttest.txt  integration_plan.md  noise_estimators_summary.md  paper.tex  pyproject.toml  run_comprehensive.sh  run_matern_study.jl  run_python.sh  savitzky_golay_implementation.md  savitzky_golay_theory.md  savitzkygolay_package_implementation_spec.md  savitzkygolay_package_parameters.md  test2.txt  test_actual_boundaries.py  test_actual_smoothing_success.jl  test_advanced_kalman.py  (+45 more)
debugging/: bad_run_input.json  bad_run_output.json  patch_results_with_trial.py  repro_julia_gp.jl  test_fix.py  test_gp_issue.py  test_gp_with_powell.py  test_on_lotka_volterra.py  test_without_normalize.py
docs/: ACTION_PLAN.md  BUG_ANALYSIS_ZERO_DERIVATIVES.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_RERUN_SUMMARY.md  CONFIG_ISSUES.md  CRITICAL_BUG_ANALYSIS.md  EXTRACTION_COMPLETE.md  JULIA_API_SPEC.md  METHOD_API_SPEC.md  METHOD_CATALOG.md  NRMSE_CLUSTERING_INVESTIGATION.md  PARALLELIZATION.md  PHASE2_PROGRESS.md  PLOT_TABLE_IMPROVEMENTS.md  REORGANIZATION.md  SAVITZKY_GOLAY_FIX.md  experiments.md  (+3 more)
(+295 files in other folders)
