[project]
name = "derivative-estimation-study"
version = "1.0.0"
description = "Comprehensive benchmark study of numerical derivative estimation methods"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "autograd>=1.6.2",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "pywavelets>=1.8.0",
    "baryrat>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python", "julia", "methods"]

[tool.uv]
dev-dependencies = []
